--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.23.0",
+    "dotenv": "^8.2.0",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
-    "nodemon": "^2.0.7"
+    "graphql-iso-date": "^3.6.1",
+    "graphql-relay": "^0.6.0",
+    "graphql-scalars": "^1.9.1",
+    "graphql-type-datetime": "^0.2.4",
+    "join-monster": "^3.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "prisma": "^2.21.2"
   }
 }
