--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.23.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
