--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,6 +21,7 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "../node_modules/bootstrap/dist/css/bootstrap.min.css",
               "../node_modules/font-awesome/css/font-awesome.css",
@@ -83,7 +84,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css", "src/styles.css"],
             "scripts": []
           }
         },
