--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,26 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.0",
     "@angular/animations": "~11.2.10",
+    "@angular/cdk": "^11.2.11",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
     "@angular/forms": "~11.2.10",
+    "@angular/material": "^11.2.11",
+    "@angular/material-moment-adapter": "^11.2.11",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@apollo/client": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "angular2-datetimepicker": "^1.1.1",
     "apollo-angular": "^2.4.0",
     "graphql": "^15.0.0",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.1",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
